# vaultfire-zk-proofs

./: .gitignore  Cargo.toml  README.md
apps/: Cargo.toml
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: VaultfireTrustAttestation.sol
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/src/: lib.rs
