[workspace]
resolver = "2"
members = ["apps", "methods"]

[workspace.dependencies]
alloy-primitives = "=0.8.20"
alloy-sol-types = "=0.8.20"
risc0-build = "1.2"
risc0-zkvm = "1.2"
risc0-steel = "0.14"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
