[workspace]
resolver = "2"
members = ["apps", "methods"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[workspace.dependencies]
risc0-build = "^3.0.5"
risc0-zkvm = "^3.0.5"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
