[package]
name = "vaultfire-zk-apps"
version = "0.1.0"
edition = "2021"
description = "Host applications for generating and submitting Vaultfire ZK proofs"

[dependencies]
vaultfire-zk-methods = { path = "../methods" }
risc0-zkvm = "^3.0.5"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "publisher"
path = "src/bin/publisher.rs"
