[package]
name = "vaultfire-zk-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.5", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "trust_score_proof"
path = "src/bin/trust_score_proof.rs"

[[bin]]
name = "registration_age_proof"
path = "src/bin/registration_age_proof.rs"

[[bin]]
name = "bond_total_proof"
path = "src/bin/bond_total_proof.rs"

[profile.release]
lto = "thin"
